profilelist1exp/unpackaged/objects/Generic_Product_Map__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Generic_product_maps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_10__c</fullName>
        <label>Field 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_1__c</fullName>
        <label>Field 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_2__c</fullName>
        <label>Field 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Play__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice Play</label>
        <referenceTo>LBI__Play__c</referenceTo>
        <relationshipName>Generic_product_maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Map_Type__c</fullName>
        <label>Product Map Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Generic Product Map</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{000000}</displayFormat>
        <label>Generic Product Map ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Generic Product Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>